Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-translit-prod
  labels:
    environment: production
    app: fast-translit
