Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-translit-api
  namespace: fast-translit-prod
  labels:
    app: fast-translit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fast-translit
  template:
    metadata:
      labels:
        app: fast-translit
    spec:
      containers:
      - name: fast-translit-api
        image: mradulnatani/fast-transit:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
