Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-translit-service
  namespace: fast-translit-prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: fast-translit
